--- a/src/app/BUILD.gn
+++ b/src/app/BUILD.gn
@@ -43,12 +43,16 @@ static_library("app") {
   output_name = "libCHIPDataModel"
 
   sources = [
+    "Cluster.cpp",
+    "Cluster.h",
     "Command.cpp",
     "Command.h",
     "CommandHandler.cpp",
     "CommandSender.cpp",
     "EventManagement.cpp",
     "InteractionModelEngine.cpp",
+    "InvokeInteraction.cpp",
+    "InvokeInteraction.h",
     "MessageDef/AttributeDataElement.cpp",
     "MessageDef/AttributeDataElement.h",
     "MessageDef/AttributeDataList.cpp",
@@ -108,10 +112,6 @@ static_library("app") {
     "encoder-common.cpp",
     "reporting/Engine.cpp",
     "reporting/Engine.h",
-    "InvokeInteraction.cpp",
-    "InvokeInteraction.h",
-    "Cluster.cpp",
-    "Cluster.h"
   ]
 
   if (chip_ip_commissioning) {
